# gotham-micro

./: .env  Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  result_dispatcher.rs
src/handlers/: posts.rs
src/models/: posts.rs
